--- a/02_css/230127ex1.html
+++ b/02_css/230127ex1.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>과제1</title>
-  <link rel="stylesheet" href="./과제1.css"/>
+  <link rel="stylesheet" href="./230127ex1.css"/>
   <style>
     h2{color: white; background-color: blue;}
     h3{color: white; background-color: black;}
