--- a/02_css/position/230201ex2.html
+++ b/02_css/position/230201ex2.html
@@ -9,7 +9,7 @@
     body{margin: 0; font-size: 4rem;}
     div{position: absolute; width: 10rem; height: 10rem; }
     .box1{width: 20rem; height: 20rem; background-color: antiquewhite;}
-    .box2{background-color: mediumpurple; left: 10rem; top: 0rem;}
+    .box2{background-color: mediumpurple; left: 10rem;}
     .box3{background-color: lightcoral; left: 20rem; top: 20rem;}
     .box4{background-color: lightcyan; left: 30rem; top: 10rem;}
     .box5{background-color: lavender; top: 10rem;}
