--- a/02_css/position/230201ex4.html
+++ b/02_css/position/230201ex4.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ex4</title>
   <style>
-    div{width: 80px; height: 80px; border-radius: 50%;}
-    .circle1{position: relative; background-color: mediumaquamarine; border-radius: 50%; position: absolute;}
-    .circle1-1{border-radius: 50%; position: absolute; width: 30px; height: 30px; color: white; top: 20px; left: 30px;}
-    .circle1-2{border-radius: 50%; position: absolute; width: 20px; height: 20px; color: black; top: 25px; left: 30px;}
-    .circle2{position: absolute; background-color: mediumblue; left: 70px; top: 35px;}
-    .circle3{position: absolute;background-color: mediumorchid; left: 110px; top: 65px;}
-    .circle4{position: absolute;background-color: mediumpurple; left: 150px; top: 65px;}
-    .circle5{position: absolute;background-color: mediumseagreen; left: 200px; top: 65px;}
+    div{position: absolute; width: 80px; height: 80px; border-radius: 50%;}
+    .circle1{background-color: mediumaquamarine;}
+    .circle1-1{width: 30px; height: 30px;background-color: white; top: 20px; left: 20px;}
+    .circle1-2{width: 15px; height: 15px; background-color: black; top: 5px;}
+    .circle2{background-color: mediumblue; left: 70px; top: 35px; z-index: 1;}
+    .circle3{background-color: mediumorchid; left: 110px; top: 65px; z-index: 2;}
+    .circle4{background-color: mediumpurple; left: 150px; top: 65px; z-index: 3;}
+    .circle5{background-color: mediumseagreen; left: 200px; top: 65px;  z-index: 4;}
   </style>
 </head>
 <body>
