--- a/02_css/position/230201ex5.html
+++ b/02_css/position/230201ex5.html
@@ -7,15 +7,15 @@
   <title>ex5</title>
   <style>
     ul{ display: flex; list-style: none; padding-left: 0px; padding: 20px; border-radius: 10px; background-color: gray;}
-    li{color: white; cursor: pointer;  font-weight: bold; flex-grow: 1; flex-basis: 100px; text-align: center; flex-shrink: 0;}
+    li{color: #eee; cursor: pointer;  font-weight: bold; flex-grow: 1; flex-basis: 100px; text-align: center; flex-shrink: 0;}
   </style>
 </head>
 <body>
   <ul>
-    <li class="item1">메뉴1</li>
-    <li class="item2">메뉴2</li>
-    <li class="item3">메뉴3</li>
-    <li class="item4">메뉴4</li>
+    <li>메뉴1</li>
+    <li>메뉴2</li>
+    <li>메뉴3</li>
+    <li>메뉴4</li>
   </ul>
 </body>
 </html>
