--- a/02_css/position/flex-order.html
+++ b/02_css/position/flex-order.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    .containter{display: flex; width: 700px; height: 500px; background-color: aquamarine;}
-    div{height: 100px; background-color: orange; border: 1px solid black; text-align: center; flex-basis: 100px;}
+    .container{display: flex; width: 700px; height: 500px; background-color: green;}
+    div{height: 100px; background-color: orange; border: 1px solid black; text-align: center; flex-basis: 0;}
     .item1{flex-grow: 1;}
     .item2{flex-grow: 1;}
     .item3{flex-grow: 1;}
