--- a/02_css/position/flex-wrap.html
+++ b/02_css/position/flex-wrap.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>flex-wrap</title>
   <style>
-    .containter{display: flex; flex-direction: column; align-items: center; width: 700px; height: 500px; background-color: aquamarine;}
+    .containter{display: flex; flex-direction: row; align-items: center; flex-wrap: wrap; width: 700px; height: 500px; background-color: aquamarine;}
     div{width: 100px; height: 100px; background-color: lightseagreen; border: 1px solid black;}
   </style>
 </head>
