--- a/02_css/responsive/230202ex3.html
+++ b/02_css/responsive/230202ex3.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ex3</title>
   <style>
+    body{background-color: aquamarine;}
     @media screen and (min-width: 500px) {
-      body{background-color: skyblue;}
+      body{background-color: lightgoldenrodyellow;}
     }
     @media screen and (max-width: 300px) {
-      body{background-color: orange;}
+      body{background-color: mediumpurple;}
     }
     @media screen and (max-height: 300px){
       p{font-size: 2rem;}
     }
     @media screen and (min-height: 500px) {
-      body{background-color: green;}
+      body{background-color: salmon;}
     }
   </style>
 </head>
