--- a/04_js/order.html
+++ b/04_js/order.html
@@ -12,7 +12,6 @@
 <body>
   <script>alert("바디안쪽");</script>
 </body>
-  <script>alert("바대아래")</script>
+  <script>alert("바디아래")</script>
 </html>
-<script>alert("헤드태그 안쪽, js파일 링크 위")</script>
 <script>alert("헤드태그 안쪽, js파일 링크 위")</script>
