--- a/04_js/index.html
+++ b/04_js/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title><!--script - html 문서 밖에 있어도 실행-->
-  <script src="extends/extends.js"></script>
+  <script src="extends/js230213ex5.js"></script>
 </head>
 <body>
   
