--- a/04_js/dom/ex-index.html
+++ b/04_js/dom/ex-index.html
@@ -7,19 +7,22 @@
   <title>Document</title><!--script - html 문서 밖에 있어도 실행-->
   <style>
     .orange{background-color: orange;}
+    #skyblue{background-color: skyblue;}
   </style>
 </head>
 <body>
-  <div class="box">box</div>
-  <div class="box">box2</div>
-  <div class="box" id="third">box3</div>
   <ul>
-    <li>1</li>
+    <li class="orange">1</li>
     <li>2</li>
     <li>3</li>
     <li>4</li>
     <li>5</li>
+    <li id="skyblue">6</li>
+    <li>7</li>
+    <li>8</li>
+    <li>9</li>
+    <li>10</li>
   </ul>
-  <script src="./dom/classList.js"></script>
+  <script src="js230214ex2.js"></script>
 </body>
 </html>
